# ia-nutricionista

./: .env-example  pyproject.toml
nutritionist/agents/: nutritionist.py
nutritionist/chat/: telegram.py
nutritionist/tools/: diet_plain_tool.py  food_analyser_tool.py  meal_entry_tool.py  report_tool.py  user_info_tool.py  user_registration_tool.py  weight_update_tool.py
